# cupti_cudagraphs

./: .gitmodules  CMakeLists.txt  README.md  build.sh  cuda_graphs_trace.cpp  main.cu  profiling.cpp  profiling.h  vec.cu
